--- a/src/app/features/admin/accounts/accounts-list/accounts-list.component.html
+++ b/src/app/features/admin/accounts/accounts-list/accounts-list.component.html
@@ -47,6 +47,7 @@
                 <th scope=" col" class="font-semibold text-center">{{'AdminPage.accountsPage.account'| translate}}</th>
 
                 <th scope="col" class="max-w-[315px]">{{'AdminPage.accountsPage.fullName'| translate}}</th>
+                <th scope="col" class="max-w-[315px]">{{'AdminPage.accountsPage.createDate'| translate}}</th>
                 <th scope="col" class="max-w-[150]">{{'AdminPage.accountsPage.status'| translate}}</th>
                 <th scope="col" class="w-[150px] !text-center">{{'AdminPage.accountsPage.action'| translate}}</th>
             </ng-template>
@@ -54,23 +55,26 @@
                 <td class="max-w-[75px] min-h-12 text-balance">{{ index+1 }}</td>
                 <td class="text-balance min-h-12 max-w-[450px] truncate">{{ row.email }}</td>
                 <td class="max-w-[450px] min-h-12 truncate">{{ row.fullName}}</td>
-                <td class="max-w-[150px] min-h-12" [class.text-green-600]="row.statusAccount===1"
-                    [class.text-yellow-600]="row.statusAccount===2" [class.text-red-600]="row.statusAccount===3"
-                    [class.text-gray-300]="row.statusAccount===0">
-                    {{row.statusAccount===1? activelable :row.statusAccount===2?deactiveLable:
-                    row.statusAccount===3?blockLabel:row.statusAccount===0? notActivatedLabel:""}}</td>
-
+                <td class="max-w-[300px] min-h-12 truncate">{{ row.createDate |date:"dd/MM/yyyy" }}</td>
+                <td class="max-w-[150px] min-h-12" [class.text-green-600]="row.statusAccount===AccountStatusEnum.Active"
+                    [class.text-yellow-600]="row.statusAccount===AccountStatusEnum.InActive"
+                    [class.text-red-600]="row.statusAccount===AccountStatusEnum.Block"
+                    [class.text-gray-300]="row.statusAccount===AccountStatusEnum.NoActive">
+                    {{row.statusAccount===AccountStatusEnum.Active? activelable
+                    :row.statusAccount===AccountStatusEnum.InActive?deactiveLable:
+                    row.statusAccount===AccountStatusEnum.Block?blockLabel:row.statusAccount===AccountStatusEnum.NoActive?
+                    notActivatedLabel:""}}</td>
                 <td>
                     <div class="flex items-center justify-center min-h-12">
                         <i class="fa-solid fa-ellipsis cursor-pointer" nz-dropdown nzTrigger="click"
                             [nzDropdownMenu]="menu"></i>
                         <nz-dropdown-menu #menu="nzDropdownMenu">
                             <ul nz-menu>
-                                <li *ngIf="row.statusAccount!==3" (click)="handelChangeStatusAccount(row,true)"
-                                    nz-menu-item>
+                                <li *ngIf="row.statusAccount!==AccountStatusEnum.Block"
+                                    (click)="handelChangeStatusAccount(row,true)" nz-menu-item>
                                     {{'AdminPage.accountsPage.block'| translate}}</li>
-                                <li *ngIf="row.statusAccount===3" (click)="handelChangeStatusAccount(row,false)"
-                                    nz-menu-item>
+                                <li *ngIf="row.statusAccount===AccountStatusEnum.Block"
+                                    (click)="handelChangeStatusAccount(row,false)" nz-menu-item>
                                     {{'AdminPage.accountsPage.unBlock'| translate}}</li>
                                 <!-- <li (click)="handelDeleteAccount(row)" nz-menu-item>
                                     {{'AdminPage.accountsPage.deleteAccount'| translate}}</li> -->
