--- a/src/app/core/components/item/item.component.html
+++ b/src/app/core/components/item/item.component.html
@@ -1,13 +1,16 @@
 <div
     class=" bg-slate-100 rounded-lg overflow-hidden hover:shadow-[0_3px_10px_rgb(0,0,0,0.2)] hover:translate-y-[-8px] transition-all">
-    <a class=" hover:text-textColor" [routerLink]="['/detail/1']">
-        <img loading="lazy" class="h-[200px] w-full object-cover"
-            src="https://img.thuephongtro.com/images/thumb/2020/10/08/20201008070713-mavi4.jpg" alt="" />
+    <a class=" hover:text-textColor" [routerLink]="['/detail', data?.id]">
+        <img loading="lazy" class="h-[200px] w-full object-cover" [src]="data?.images[0]" alt=""
+            (error)="onerror($event)" />
         <div class="px-3 py-1 pb-4 flex flex-col gap-2">
-            <p class="font-semibold text-base ">Cho thuê phòng trọ tôn thất thuyết quận 4</p>
-            <p class="text-green-600"><i class="fa-solid fa-money-bill mr-2"></i>2.5 Triệu/tháng</p>
-            <p class="text-yellow-500"><i class="fa-solid fa-expand mr-2"></i>25m<sup>2</sup></p>
-            <p class="text-gray-400"><i class="fa-solid fa-location-dot mr-2"></i> <span>Quận 5, Hồ Chí Minh</span></p>
+            <p class="font-semibold text-base ">{{data?.title}}</p>
+            <p class="text-green-600"><i class="fa-solid fa-money-bill mr-2"></i>{{data?.price.toLocaleString()}}đ/tháng
+            </p>
+            <p class="text-yellow-500"><i class="fa-solid fa-expand mr-2"></i>{{data?.acreage}}m<sup>2</sup></p>
+            <p class="text-gray-400"><i class="fa-solid fa-location-dot mr-2"></i>
+                <span>{{data?.ward}},{{data?.district}}</span>
+            </p>
         </div>
     </a>
 </div>
