--- a/src/app/features/manager-post/manager-post.component.html
+++ b/src/app/features/manager-post/manager-post.component.html
@@ -2,12 +2,7 @@
 <div>
     <h2 class="text-[14px] lg:text-[26px] font-medium block">{{"homePage.newest" | translate}}</h2>
     <div class="grid lg:grid-cols-5 grid-cols-1 mt-3 gap-4">
-        <app-item></app-item>
-        <app-item></app-item>
-        <app-item></app-item>
-        <app-item></app-item>
-        <app-item></app-item>
-        <app-item></app-item>
-        <app-item></app-item>
+        <app-item *ngFor="let item of data" [data]="item"></app-item>
+
     </div>
 </div>
