--- a/src/app/features/detail-hostel/detail-hostel.component.html
+++ b/src/app/features/detail-hostel/detail-hostel.component.html
@@ -73,7 +73,7 @@
     </div>
     <div class="lg:w-4/12  h-fit">
         <div *ngIf="isManager" class="  rounded-md mb-5 flex gap-4">
-            <button [routerLink]="['/editNews',1]" routerLinkActive="router-link-active"
+            <button [routerLink]="['/editNews',idPost]" routerLinkActive="router-link-active"
                 class="px-4 py-2 bg-yellow-500 text-white w-[110px] rounded-lg hover:opacity-80">
                 {{"Button.edit"|translate}}</button>
             <button class="px-4 py-2 bg-red-600 text-white w-[110px] rounded-lg hover:opacity-80" nz-popconfirm
