update item post, search post admin

--- a/src/app/core/components/item/item.component.html
+++ b/src/app/core/components/item/item.component.html
@@ -8,7 +8,7 @@
             <p class="text-green-600"><i class="fa-solid fa-money-bill mr-2"></i>{{data?.price.toLocaleString()}}đ/tháng
             </p>
             <p class="text-yellow-500"><i class="fa-solid fa-expand mr-2"></i>{{data?.acreage}}m<sup>2</sup></p>
-            <p class="text-gray-400"><i class="fa-solid fa-location-dot mr-2"></i>
+            <p class="text-gray-400  max-w-full w-full truncate"><i class="fa-solid fa-location-dot mr-2"></i>
                 <span>{{data?.ward}},{{data?.district}}</span>
             </p>
         </div>
