--- a/src/app/features/manager-post/item/item.component.html
+++ b/src/app/features/manager-post/item/item.component.html
@@ -8,12 +8,14 @@
             <p class="text-green-600"><i class="fa-solid fa-money-bill mr-2"></i>{{data?.price.toLocaleString()}}đ/tháng
             </p>
             <p class="text-yellow-500"><i class="fa-solid fa-expand mr-2"></i>{{data?.acreage}}m<sup>2</sup></p>
-            <p class="text-gray-400"><i class="fa-solid fa-location-dot mr-2"></i>
+            <p class="text-gray-400  max-w-full w-full truncate"><i class="fa-solid fa-location-dot mr-2"></i>
                 <span>{{data?.ward}},{{data?.district}}</span>
             </p>
         </div>
     </a>
 
-    <span *ngIf="data?.paymentType===0" class="text-yellow-500 float-right">{{"Toast.pending"|translate}}</span>
-    <span *ngIf="data?.paymentType===1" class="text-green-500 float-right">{{"Toast.payed"|translate}}</span>
+    <div class="p-2">
+        <span *ngIf="data?.paymentType===0" class="text-yellow-500 float-right">{{"Toast.pending"|translate}}</span>
+        <span *ngIf="data?.paymentType===1" class="text-green-500 float-right">{{"Toast.payed"|translate}}</span>
+    </div>
 </div>
