--- a/src/app/features/detail-hostel/detail-hostel.component.html
+++ b/src/app/features/detail-hostel/detail-hostel.component.html
@@ -47,12 +47,13 @@
             </div>
             <div>
                 <textarea class="resize-none h-[100px] w-full border mt-4 px-2" [(ngModel)]="evaluation"></textarea>
-                <button [disabled]="!evaluation" nz-button nzType="primary"
-                    (click)="handelSendEvaluation()">{{"Button.send"|translate}}
+                <button [disabled]="!evaluation||!idAccount" nz-button nzType="primary"
+                    [nzLoading]="isLoaddingSendComment" (click)="handelSendEvaluation()">{{"Button.send"|translate}}
                 </button>
             </div>
+            <app-comment *ngFor="let comment of dataComment" [content]="comment"></app-comment>
 
-            <app-comment [content]="'Nhớ hồi xưa, thời mà con người không bị chi phối bởi chiếc điện
+            <!-- <app-comment [content]="'Nhớ hồi xưa, thời mà con người không bị chi phối bởi chiếc điện
             thoại,
             rất nhiều kỉ niệm vui,
             giới trẻ bây giờ không bao giờ có được khoảng thời gian ngây thơ trong sáng đẹp như thời
@@ -66,7 +67,7 @@
             thoại,
             rất nhiều kỉ niệm vui,
             giới trẻ bây giờ không bao giờ có được khoảng thời gian ngây thơ trong sáng đẹp như thời
-            8x9x, cảm ơn vì mình được sinh ra ở thế hệ 8x9x '"></app-comment>
+            8x9x, cảm ơn vì mình được sinh ra ở thế hệ 8x9x '"></app-comment> -->
 
         </div>
 
