--- a/src/app/features/post-news/post-news.component.html
+++ b/src/app/features/post-news/post-news.component.html
@@ -161,8 +161,10 @@
 
                 <button *ngIf="!postID" (click)="handelPostAndPay()"
                     class="bg-primary text-white px-4 py-2 rounded-md mt-9 float-right hover:opacity-80">{{"postPage.createPost"|translate}}</button>
-                <button *ngIf="postID" (click)="handleUpdatePost()"
+                <button *ngIf="postID && statusPay===2" (click)="handleUpdatePost()"
                     class="bg-primary text-white px-4 py-2 rounded-md mt-9 float-right hover:opacity-80">{{"postPage.updatePost"|translate}}</button>
+                <button *ngIf="postID && statusPay!==2" (click)="handleUpdatePost()"
+                    class="bg-primary text-white px-4 py-2 rounded-md mt-9 float-right hover:opacity-80">{{"postPage.updatePostAndPay"|translate}}</button>
             </div>
         </div>
     </div>
