update validate, avatar default

--- a/src/app/features/detail-hostel/comment/comment.component.html
+++ b/src/app/features/detail-hostel/comment/comment.component.html
@@ -1,6 +1,5 @@
 <div class="flex gap-3  mt-5">
-    <img src="https://thuephongtro.com/images/avatar/9bbc766c42ec4d178d88786b84b5c963.jpg" alt=""
-        class="size-[30px] rounded-[50%]">
+    <img src="assets/img/avaDefault.png" alt="" class="size-[30px] rounded-[50%]">
     <div>
         <div class="flex gap-2 items-center"><span class="font-bold">{{content.accountName}}</span> <span
                 class="text-gray-500 text-[13px]">{{content.createDate | date
