--- a/src/app/features/detail-hostel/detail-hostel.component.html
+++ b/src/app/features/detail-hostel/detail-hostel.component.html
@@ -93,15 +93,14 @@
         </div>
         <div class="bg-white  rounded-md">
             <div class="flex items-center">
-                <img src="https://thuephongtro.com/images/avatar/9bbc766c42ec4d178d88786b84b5c963.jpg"
-                    class="size-[70px] rounded-[50%] object-cover m-3" alt="">
+                <img src="assets/img/avaDefault.png" class="size-[70px] rounded-[50%] object-cover m-3" alt="">
                 <div>
                     <p class="font-bold">{{data?.ownerHouse}}</p>
                     <!-- <p class="text-gray-300">{{"detailpage.joiningDate"|translate}}: 25/04/2024</p> -->
                 </div>
             </div>
             <div class="p-5 border-t flex flex-col gap-3">
-                <div class="hover:text-[#1890ff] w-full h-[50px] bg-[#f2f8fe] rounded-md "><a
+                <div *ngIf="data?.zalo" class="hover:text-[#1890ff] w-full h-[50px] bg-[#f2f8fe] rounded-md "><a
                         class=" w-full h-full flex items-center justify-center gap-2" [href]="telZalo"><span nz-icon
                             nzType="zaloIcon:antd" nzTheme="outline"></span>
                         Zalo</a></div>
