--- a/src/app/features/register/register.component.html
+++ b/src/app/features/register/register.component.html
@@ -20,6 +20,11 @@
                             class="text-red-600">
                             {{'PopUpRegister.wrongEmail'|translate}}
                         </mat-error>
+                        <mat-error
+                            *ngIf="form.get('email')?.errors?.['apiError']&& (form.get('email')?.dirty || form.get('email')?.touched)"
+                            class="text-red-600">
+                            {{'PopUpRegister.emailAlreadyExited'|translate}}
+                        </mat-error>
                     </mat-form-field>
 
                 </div>
@@ -47,9 +52,7 @@
                         class="text-red-600">
                         {{'PopUpRegister.noEmty'|translate}}
                     </mat-error>
-                    <mat-error
-                        *ngIf="form.get('phoneNumber')?.value>0 &&form.get('phoneNumber')?.errors?.['phoneNumberCheck']"
-                        class="text-red-600">
+                    <mat-error *ngIf="form.get('phoneNumber')?.errors?.['phoneNumberCheck']" class="text-red-600">
                         {{'PopUpRegister.wrongPhoneNumber'|translate}}
                     </mat-error>
 
@@ -91,7 +94,9 @@
                         class="text-red-600">
                         {{'PopUpRegister.noEmty'|translate}}
                     </mat-error>
-                    <mat-error *ngIf="form.get('rePass')?.errors?.['rePassCheck']" class="text-red-600">
+                    <mat-error
+                        *ngIf="form.get('rePass')?.errors?.['rePassCheck']&& (form.get('rePass')?.dirty || form.get('rePass')?.touched)"
+                        class="text-red-600">
                         {{'PopUpRegister.notMatch'|translate}}
                     </mat-error>
                 </mat-form-field>
