--- a/src/app/features/home/home-search/home-search.component.html
+++ b/src/app/features/home/home-search/home-search.component.html
@@ -1,9 +1,9 @@
 <div class="flex justify-between">
     <p>Tìm thấy {{ dataSearch?.totalItem }} kết quả</p>
-    <a nz-dropdown [nzDropdownMenu]="menu">
+    <!-- <a nz-dropdown [nzDropdownMenu]="menu">
         Sắp xếp
         <span nz-icon nzType="down"></span>
-    </a>
+    </a> -->
 </div>
 <nz-dropdown-menu #menu="nzDropdownMenu">
     <ul nz-menu>
