--- a/src/app/features/home/home-list/home-list.component.html
+++ b/src/app/features/home/home-list/home-list.component.html
@@ -1,8 +1,12 @@
 <h1 class="text-[16px] lg:text-[36px] font-medium block text-center">{{"sloganText" | translate}}</h1>
+
 <div>
     <h2 class="text-[14px] lg:text-[26px] font-medium block">{{"homePage.mostViewed" | translate}}</h2>
-    <swiper-container class="swiper-container" slides-per-view="4" autoplay space-between=" 12" speed="500" loop="true"
-        centerInsufficientSlides="true" wrapperClass="slide-Wrapper" #swiper>
+    <div *ngIf="!mostViewPostList.length" class="flex justify-center items-center"> <span
+            class="text-lg">{{'pagination.noData' | translate}}</span></div>
+    <swiper-container *ngIf="mostViewPostList.length" class="swiper-container" slides-per-view="4" autoplay
+        space-between=" 12" speed="500" loop="true" centerInsufficientSlides="true" wrapperClass="slide-Wrapper"
+        #swiper>
         <swiper-slide class="swiper-slide py-4" *ngFor="let item of mostViewPostList">
             <app-item [data]="item"></app-item>
         </swiper-slide>
@@ -11,13 +15,17 @@
 </div>
 <div>
     <h2 class="text-[14px] lg:text-[26px] font-medium block">{{"homePage.newest" | translate}}</h2>
-    <div class="grid lg:grid-cols-5 grid-cols-1 mt-3 gap-4">
-        <app-item *ngFor="let post of newestPostList" [data]="post"></app-item>
-        <!-- <app-item></app-item>
-        <app-item></app-item>
-        <app-item></app-item>
-        <app-item></app-item>
-        <app-item></app-item>
-        <app-item></app-item> -->
+    <div *ngIf="!newestPostList.length" class="flex justify-center items-center"> <span
+            class="text-lg">{{'pagination.noData' | translate}}</span></div>
+    <div *ngIf="newestPostList.length">
+        <div class="grid lg:grid-cols-5 grid-cols-1 mt-3 gap-4">
+            <app-item *ngFor="let post of newestPostList" [data]="post"></app-item>
+            <!-- <app-item></app-item>
+            <app-item></app-item>
+            <app-item></app-item>
+            <app-item></app-item>
+            <app-item></app-item>
+            <app-item></app-item> -->
+        </div>
     </div>
 </div>
