--- a/src/app/features/manager-post/manager-post.component.html
+++ b/src/app/features/manager-post/manager-post.component.html
@@ -1,7 +1,9 @@
 <h1 class="text-[24px] text-textColor mt-7">{{"managerPostPage.postedArticles" | translate}}</h1>
 <div>
     <h2 class="text-[14px] lg:text-[26px] font-medium block">{{"homePage.newest" | translate}}</h2>
-    <div class="grid lg:grid-cols-5 grid-cols-1 mt-3 gap-4">
+    <div *ngIf="!data?.length" class="flex justify-center items-center"> <span class="text-lg">{{'pagination.noData' |
+            translate}}</span></div>
+    <div *ngIf="data?.length" class="grid lg:grid-cols-5 grid-cols-1 mt-3 gap-4">
         <app-item *ngFor="let item of data" [data]="item"></app-item>
 
     </div>
